// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected 1`] = `
<Button
  onPress={[Function]}
  styles={
    Object {
      "button": Object {
        "backgroundColor": "#ca0000",
      },
    }
  }
  title="Google Sign in"
/>
`;

exports[`renders as expected while loading 1`] = `
<Button
  styles={
    Object {
      "button": Object {
        "backgroundColor": "#ca0000",
      },
    }
  }
  title="Logging in..."
/>
`;
